# Librarian-By-Hoi-An-Che

./: README.md  requirements.txt  runAll.sh  setup.sh  testSerial.py
lib_arduino_control/: lib_arduino_control.ino
lib_arduino_draft/: lib_arduino_draft.ino
lib_bringup/: CMakeLists.txt  package.xml
lib_bringup/config/: Librarian.json
lib_bringup/data/: Borrow.csv  Return.csv
lib_bringup/launch/: .bringUp.launch.swp  bringUp.launch  chatBot.launch  gazeboSim.launch  runAll.launch
lib_bringup/maps/: 701.pgm  701.yaml  Dong.pgm  Dong.yaml  house.pgm  house.yaml  map.yaml  test.pgm  test.yaml
lib_bringup/param/: robot_localization_map.yaml  robot_localization_odom.yaml
lib_bringup/src/: database.py  demo.py  main_node.py
lib_bringup/urdf/: librarian.urdf.xacro
lib_chatbot/: CMakeLists.txt  package.xml
lib_chatbot/msg/: Chatbot.msg
lib_chatbot/rasa/: actions.py  config.yml  credentials.yml  domain.yml
lib_chatbot/src/: connect_rasa.py
lib_control/: CMakeLists.txt  package.xml
lib_control/include/: list_position.h
lib_control/src/: control.cpp  odom_transform.cpp
lib_microphone/: CMakeLists.txt  package.xml
lib_microphone/file/: Librarian.json
lib_microphone/src/: SpeechRecognition.py  record.py
lib_model/: CMakeLists.txt  package.xml
lib_model/launch/: simulator.launch
lib_model/urdf/: model.xacro
lib_navigation/: CMakeLists.txt  package.xml
lib_navigation/config/: librarian.yaml  omni_mobile.yaml  scan_data_filter.yaml
lib_navigation/launch/: amcl.launch  gmapping.launch  move_base.launch  navigation.launch
lib_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  (+2 more)
lib_omni_mobile/: CMakeLists.txt  README.md  package.xml
lib_omni_mobile/control/: MPU6050.ino  control.ino
lib_omni_mobile/launch/: simulator.launch
lib_omni_mobile/rviz/: urdf.rviz
lib_omni_mobile/scripts/: controlKeyboard.py  controlOmniMobile.py
lib_omni_mobile/src/: OmniMobile.cpp  convertTwist2Speed.cpp
lib_omni_mobile/urdf/: materials.xacro  omni_mobile.gazebo.xacro  omni_mobile.urdf.xacro  omni_mobile.xacro  rim_wheel.urdf.xacro  roller_wheel.urdf.xacro
lib_planar_arm/: CMakeLists.txt  README.md  package.xml
lib_planar_arm/control/: control.ino
lib_planar_arm/launch/: simulator.launch
lib_planar_arm/rviz/: urdf.rviz
lib_planar_arm/scripts/: controlPlanarArm.py  ik.py  receive_joint.py
lib_planar_arm/urdf/: planar_arm.urdf.xacro  planar_arm.xacro  robot_arm.urdf
lib_run/: requirements.txt  runAll.sh  runChatBot.sh
lib_speaker/: CMakeLists.txt  package.xml
lib_transform/: CMakeLists.txt  package.xml
(+16 files in other folders)
